--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculator</title>
 </head>
 <body>
+    <h1>Theo's Calculator</h1>
     <section class="calculator">
         <div class="display">
             <p class="result-class" id="result"></p>
