--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
             <p class="result-class" id="result"></p>
         </div>
         <div class="calc-line">
-            <button class="number-button">+</button>
-            <button class="number-button">-</button>
-            <button class="number-button">x</button>
-            <button class="number-button">÷</button>
+            <button class="calc-button" id="calc-plus" onclick="insert('+')">+</button>
+            <button class="calc-button" id="calc-minus" onclick="insert('-')">-</button>
+            <button class="calc-button" id="calc-times" onclick="insert('*')">*</button>
+            <button class="calc-button" id="calc-division" onclick="insert('/')">/</button>
         </div>
         <div class="numbers-container">
-            <div class="first-line">
-                <button class="number-button">1</button>
-                <button class="number-button">2</button>
-                <button class="number-button">3</button>
+            <div class="line">
+                <button class="number-button" id="n-seven" onclick="insert('7')">7</button>
+                <button class="number-button" id="n-eight" onclick="insert('8')">8</button>
+                <button class="number-button" id="n-nine" onclick="insert('9')">9</button>
             </div>
-            <div class="second-line">
-                <button class="number-button">4</button>
-                <button class="number-button">5</button>
-                <button class="number-button">6</button>
+            <div class="line">
+                <button class="number-button" id="n-four" onclick="insert('4')">4</button>
+                <button class="number-button" id="n-five" onclick="insert('5')">5</button>
+                <button class="number-button" id="n-six" onclick="insert('6')">6</button>
             </div>
-            <div class="third-line">
-                <button class="number-button">7</button>
-                <button class="number-button">8</button>
-                <button class="number-button">9</button>
+            <div class="line">
+                <button class="number-button" id="n-one" onclick="insert('1')">1</button>
+                <button class="number-button" id="n-two" onclick="insert('2')">2</button>
+                <button class="number-button" id="n-three" onclick="insert('3')">3</button>
             </div>
-            <div class="fourth-line">
-                <button class="number-button">.</button>
-                <button class="number-button">0</button>    
-                <button class="number-button">=</button>
+            <div class="line">
+                <button class="calc-button" id="n-dot" onclick="insert('.')">.</button>
+                <button class="number-button" id="n-zero" onclick="insert('0')">0</button>    
+                <button class="calc-button" id="n-clear" onclick="clean()">C</button>
+            </div>
+            <div class="equal-line">
+                <button class="equal-button" onclick="calculate()">=</button>
             </div>
         </div>
     </section>
