--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
         </div>
     </section>
+    <h2 id="validValue">Digite um valor válido!</h2>
     <script src="main.js"></script>
 </body>
 </html>
